boat-bay-frontend/kubernetes-manifests/boat-bay.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boat-bay-ui
  labels:
    app: boat-bay-ui
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: boat-bay-ui
    tier: backend
  ports:
    - port: 8080
      targetPort: http
