boat-bay-frontend/kubernetes-manifests/boat-bay.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: boat-bay-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.proto.backbasecloud.com/oauth2/start?rd=/redirect/$http_host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth2.proto.backbasecloud.com/oauth2/auth
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
  namespace: boat-bay


spec:
  rules:
    - host: "boat-bay.proto.backbasecloud.com"
      http:
        paths:
          - backend:
              serviceName: boat-bay-ui
              servicePort: http
            path: /
